// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectContent > should match snapshot 1`] = `
<div>
  <article
    class="article"
  >
    <div
      data-testid="markdown-content"
    >
      # Test Project\\n\\nSome markdown content here.
    </div>
  </article>
</div>
`;

exports[`ProjectContent > should match snapshot with code block 1`] = `
<div>
  <article
    class="article"
  >
    <div
      data-testid="markdown-content"
    >
      
# Project Code

Here's some code:

\`\`\`typescript
interface Project {
  name: string;
  version: string;
}
\`\`\`

    </div>
  </article>
</div>
`;
